--- a/Tartarus-final/Tartarus-final/appsettings.json
+++ b/Tartarus-final/Tartarus-final/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Tartarus_final-D8B454FF-14CF-4707-8DEA-62D76C55B702;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "DbConnection": "Server=tcp:tartarusproj.database.windows.net,1433;Initial Catalog=ProjekatTartarus;Persist Security Info=False;User ID=tartarus;Password={Corona111};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
