--- a/Tartarus-final/Tartarus-final/appsettings.json
+++ b/Tartarus-final/Tartarus-final/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DbConnection": "Server=tcp:tartarusproj.database.windows.net,1433;Initial Catalog=ProjekatTartarus;Persist Security Info=False;User ID=tartarus;Password={Corona111};MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
+    "DbConnection": "Server=tcp:tartarusproj.database.windows.net,1433;Initial Catalog=ProjekatTartarus;Persist Security Info=False;User ID=tartarus;Password=Corona111;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   },
   "Logging": {
     "LogLevel": {
